--- a/Editor/Resources/UI/styles.uss
+++ b/Editor/Resources/UI/styles.uss
@@ -132,14 +132,19 @@ PrefabItemButton {
 	flex-direction: row;
 	margin-bottom: 4px;
 	background-color: white;
+	transition: 150ms;
 }
 
 PrefabItemButton:hover {
 	background-color: var(--default-hover);
 }
 
-PrefabItemButton > Image {
-	margin-right: 16px;
+PrefabItemButton Image {
+	flex-shrink: 0;
+}
+
+PrefabItemButton > VisualElement {
+	padding: 16px;
 }
 
 PrefabItemButton * {
@@ -280,7 +285,7 @@ DropdownField > VisualElement > PopupTextElement {
 }
 
 .border-red {
-	border-color: #550000;
+	border-color: var(--warning);
 }
 
 .tab-button {
