Add warning for missing shader in PrefabItemButton

--- a/Editor/Resources/UI/styles.uss
+++ b/Editor/Resources/UI/styles.uss
@@ -163,6 +163,10 @@ PrefabItemButton * {
 	color: var(--warning);
 }
 
+.noShader * {
+	color: var(--warning);
+}
+
 /* Label and Icon Styles */
 Label {
     color: black;
