Fix upload status display issue

--- a/Editor/Resources/UI/TabContents/Upload/Contents/UploadForm.uxml
+++ b/Editor/Resources/UI/TabContents/Upload/Contents/UploadForm.uxml
@@ -63,6 +63,7 @@
             </ui:VisualElement>
             <eau:ShadowButton text="Upload" name="upload"/>
         </ui:VisualElement>
+        <ui:VisualElement name="upload_status" />
         <ui:VisualElement class="flex-colum max-h-48">
             <ui:ScrollView name="performance_info_list" class="flex-1"/>
         </ui:VisualElement>
