Update UI styles with new color scheme

--- a/Editor/Resources/UI/styles.uss
+++ b/Editor/Resources/UI/styles.uss
@@ -2,19 +2,23 @@
 :root {
     -unity-font-definition: resource("UI/Noto_Sans_JP");
 	background-color: white;
-	--primary: rgb(25, 118, 210);
-	--primary-hover: rgb(20, 100, 180);
-	--primary-active: rgb(30, 130, 230);
-	--primary-selected: rgb(22, 105, 200);
-	--secondary: rgb(255, 152, 0);
-	--secondary-hover: rgb(230, 130, 0);
-	--secondary-active: rgb(255, 160, 0);
-	--secondary-selected: rgb(240, 140, 0);
-	--default: rgb(200, 200, 200);
-	--default-hover: rgb(240, 240, 240);
-	--default-active: rgb(210, 210, 210);
-	--default-selected: rgb(190, 190, 190);
-	--warning: rgb(176, 0, 32);
+	--primary: #006FEE;
+	--primary-hover: #338ef7;
+	--primary-active: #66aaf9;
+	--primary-selected: #005bc4;
+	--secondary: #7828c8;
+	--secondary-hover: #9353d3;
+	--secondary-active: #ae7ede;
+	--secondary-selected: #6020a0;
+	--default: #d4d4d8;
+	--default-hover: #dddde0;
+	--default-active: #e4e4e7;
+	--default-selected: #a1a1aa;
+	--warning: #f5a524;
+	--warning-hover: #f7b750;
+	--warning-active: #f9c97c;
+	--warning-selected: #c4841d;
+	font-size: 14px;
 }
 
 /* Transition Styles */
@@ -150,7 +154,7 @@ HelpButton {
 }
 
 .help-button:active {
-	background-color: rgb(30, 130, 230);
+	background-color: var(--primary-active);
 }
 
 /* Prefab Item Button Styles */
@@ -594,7 +598,7 @@ ProgressBar Label {
 	opacity: 1;
 }
 
-.unity-base-slider__dragger:hover {
+.unity-scroller .unity-base-slider__dragger:hover {
 	background-color: var(--default-active);
 }
 
@@ -626,4 +630,111 @@ ValidationItem Label {
 
 #validation_list {
 	padding: 4px;
+}
+
+/* Slide Toggle Styles */
+.slide-toggle {
+	justify-content: space-between;
+	align-items: center;
+}
+
+.slide-toggle__input {
+    background-color: var(--default);
+    max-width: 40px;
+	padding: 4px;
+    border-radius: 12px;
+    overflow: visible;
+    height: 24px;
+    transition-property: background-color;
+    transition-duration: 150ms;
+}
+
+.slide-toggle__input-knob {
+    height: 16px;
+    width: 16px;
+    background-color: white;
+    position: absolute;
+    border-radius: 50%;
+    transition-property: translate, background-color;
+    transition-duration: 150ms;
+	translate: -1px 0px;
+}
+
+.slide-toggle__input--checked {
+    background-color: var(--primary);
+}
+
+.slide-toggle__input--checked > .slide-toggle__input-knob {
+    translate: 16px 0px;
+}
+
+.slide-toggle:hover .slide-toggle__input-knob {
+    background-color: var(--default-active);
+}
+
+/* EnumField Styles */
+.unity-enum-field {
+	align-items: center;
+}
+
+.unity-enum-field__input {
+	height: 36px;
+	background-color: white;
+	border-color: var(--default);
+	padding: 0px 16px;
+	border-radius: 8px;
+	border-width: 2px;
+	transition: 150ms;
+}
+
+.unity-enum-field__input:hover {
+	background-color: var(--default);
+}
+
+.unity-enum-field__input TextElement {
+	color: black;
+}
+
+/* Slider Styles */
+Slider .unity-base-slider__tracker {
+	height: 12px;
+	border-radius: 6px;
+	background-color: var(--default);
+}
+
+Slider .unity-base-slider__dragger {
+	width: 20px;
+	height: 20px;
+	top: -10px;
+	border-radius: 10px;
+	background-color: white;
+	border-width: 0px;
+	transition: 150ms;
+	transition-property: scale, background-color;
+}
+
+Slider .unity-base-slider__drag-container:active .unity-base-slider__dragger {
+	scale: 0.75;
+}
+
+Slider .unity-base-slider__dragger:hover {
+	background-color: var(--default-hover);
+}
+
+Slider .unity-base-slider__dragger-border {
+	background-color: var(--primary);
+	width: 24px;
+	height: 24px;
+	border-radius: 12px;
+	left: -2px;
+	transition-property: none;
+}
+
+Slider .unity-slider__filler {
+	position: absolute;
+	top: 6px;
+	left: 0px;
+	height: 12px;
+	background-color: var(--primary);
+	border-radius: 6px;
 }
