--- a/Editor/Resources/UI/TabContents/Setup/Setup.uxml
+++ b/Editor/Resources/UI/TabContents/Setup/Setup.uxml
@@ -10,6 +10,11 @@
     <ui:VisualElement class="flex-row flex-1">
         <ui:VisualElement name="avatar_models" class="w-one-quarter p-4 border-r border-zinc-300">
             <ui:Label tabindex="-1" text="Select a model" parse-escape-sequences="true" display-tooltip-when-elided="true" class="text-xl font-bold mb-4"/>
+            <ui:VisualElement name="SearchSortContainer" class="flex flex-row items-center pb-4">
+            <ui:TextField name="searchQuery" picking-mode="Ignore" class="flex-1 mr-2" />
+            <eau:ShadowButton name="searchButton" text="Search" parse-escape-sequences="true" display-tooltip-when-elided="true" class="search-button" />
+            <ui:VisualElement name="sortbar" class="flex-1 pl-2" />
+            </ui:VisualElement>
             <ui:ScrollView name="model_list" class="flex-1" />
         </ui:VisualElement>
         <ui:VisualElement class="flex-1 border-r border-zinc-300">
